{
  "version": 4,
  "terraform_version": "1.6.1",
  "serial": 34,
  "lineage": "ef8cb73e-5359-e662-fbcc-ad572ad5a588",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "use_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0df435f331839b2d6",
            "arn": "arn:aws:ec2:us-east-1:827232305028:instance/i-06ec27c88e40481ec",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ssm_profile1",
            "id": "i-06ec27c88e40481ec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06dfe4b46eb117ede",
            "private_dns": "ip-10-0-1-56.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.56",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09a96520e945869b8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b86f2e0fe6d19cf0",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0db5c45a7e6688e73"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_profile_use",
            "aws_iam_role.ssm_role_use",
            "aws_security_group.allow_ping_use",
            "aws_subnet.use_subnet",
            "aws_vpc.use_vpc",
            "aws_vpc.usw_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "usw_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09ac7e749b0a8d2a1",
            "arn": "arn:aws:ec2:us-west-2:827232305028:instance/i-05f8140438e2b5fe1",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ssm_profile4",
            "id": "i-05f8140438e2b5fe1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c7aefbdb590e6599",
            "private_dns": "ip-10-1-1-127.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.127",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00a4f62ade2bc7813",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-010b91070a2608d0e",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-035b5ce8339b799d0"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_profile_usw",
            "aws_iam_role.ssm_role_usw",
            "aws_security_group.allow_ping_usw",
            "aws_subnet.usw_subnet",
            "aws_vpc.use_vpc",
            "aws_vpc.usw_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ping_use",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827232305028:security-group/sg-0db5c45a7e6688e73",
            "description": "Allow ICMP",
            "egress": [],
            "id": "sg-0db5c45a7e6688e73",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "allow_ping_use",
            "name_prefix": "",
            "owner_id": "827232305028",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05dc53e00c2d8dc39"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.use_vpc",
            "aws_vpc.usw_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ping_usw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:827232305028:security-group/sg-035b5ce8339b799d0",
            "description": "Allow ICMP",
            "egress": [],
            "id": "sg-035b5ce8339b799d0",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "allow_ping_usw",
            "name_prefix": "",
            "owner_id": "827232305028",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e854055dd454dc95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.use_vpc",
            "aws_vpc.usw_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "use_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827232305028:subnet/subnet-0b86f2e0fe6d19cf0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b86f2e0fe6d19cf0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "827232305028",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-05dc53e00c2d8dc39"
          },
          "dependencies": [
            "aws_vpc.use_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "usw_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:827232305028:subnet/subnet-010b91070a2608d0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010b91070a2608d0e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "827232305028",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0e854055dd454dc95"
          },
          "dependencies": [
            "aws_vpc.usw_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "use_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827232305028:vpc/vpc-05dc53e00c2d8dc39",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05d84b1c88bbaf181",
            "default_route_table_id": "rtb-06aa01f5e9d7ec3cb",
            "default_security_group_id": "sg-02b2950b9e8d109f3",
            "dhcp_options_id": "dopt-065ab52a6a2926766",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05dc53e00c2d8dc39",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06aa01f5e9d7ec3cb",
            "owner_id": "827232305028"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "usw_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:827232305028:vpc/vpc-0e854055dd454dc95",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-027f9b93c4607a583",
            "default_route_table_id": "rtb-000fcf8b4d7fc8d56",
            "default_security_group_id": "sg-03a0a59bf00a4eb60",
            "dhcp_options_id": "dopt-09259ecc8e51ad842",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e854055dd454dc95",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-000fcf8b4d7fc8d56",
            "owner_id": "827232305028"
          }
        }
      ]
    }
  ]
}